--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.4.2",
   "description": "A native module for background upload in react native.",
   "license": "mit",
+  "main": "src/index",
   "scripts": {
     "test": "jest",
     "build": "tsc"
