--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -8,7 +8,7 @@ target 'TestExample' do
 
   use_react_native!(:path => config["reactNativePath"])
 
-  pod 'HightroUploadService', :path => '../..'
+  pod 'ShadowUploadModule', :path => '../..'
 
   # Enables Flipper.
   #
