--- a/example/ios/TestExample.xcodeproj/xcshareddata/xcschemes/TestExample.xcscheme
+++ b/example/ios/TestExample.xcodeproj/xcshareddata/xcschemes/TestExample.xcscheme
@@ -50,6 +50,8 @@
             ReferencedContainer = "container:TestExample.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <Testables>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
