--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-shadow-upload",
+  "name": "react-native-bg-upload",
   "version": "0.4.12",
   "description": "A native module for background upload in react native.",
   "license": "mit",
@@ -13,9 +13,9 @@
     "ios",
     "android"
   ],
-  "repository": "https://github.com/Hightro/react-native-shadow-upload",
+  "repository": "https://github.com/Hightro/react-native-bg-upload",
   "author": "Joshua Nicholl <josh@hightro.com> (https://github.com/Hightro)",
-  "homepage": "https://github.com/Hightro/react-native-shadow-upload#readme",
+  "homepage": "https://github.com/Hightro/react-native-bg-upload#readme",
   "devDependencies": {
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
