--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-bg-upload",
+  "name": "@usesoftware/react-native-bg-upload",
   "version": "0.4.12",
   "description": "A native module for background upload in react native.",
   "license": "mit",
