--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -8,7 +8,7 @@ target 'TestExample' do
 
   use_react_native!(:path => config["reactNativePath"])
 
-  pod 'BGUploadModule', :path => '../..'
+  pod 'react-native-bg-upload', :path => '../..'
 
   # Enables Flipper.
   #
